--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "The must-watch Denzel's movies",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.4",
+    "heroku": "^7.22.7",
+    "mongodb": "^3.2.1",
     "node-fetch": "^2.3.0",
     "p-limit": "^2.2.0",
     "p-settle": "^2.1.0"
